[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keithley2400"
version = "0.1.0"
description = "Python driver for Keithley 2400 Series SourceMeter via GPIB/PyVISA"
requires-python = ">=3.10"
dependencies = ["pyvisa>=1.13"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["keithley2400*"]
